--- a/FRONTEND/src/components/Sidebar/Sidebar.css
+++ b/FRONTEND/src/components/Sidebar/Sidebar.css
@@ -14,6 +14,7 @@
   height: calc(100vh - 60px); 
   display: flex;
   flex-direction: column;
+  z-index: 1000;
 }
 .sidebar.collapsed {
   width: 50px;
